src/test/resources/private/typechecking/pass/this/this_02_method.jova
class Test{
    private int temp(int x) {
        return 0;
    }

    public int test() {
        return this.temp(0);
    }
}