src/test/resources/private/typechecking/fail/main_structure/fail09_mainAsLocalVar.jova
class Main {
}

class Helper {
}

class Test {

    public int func() {
        Helper a;
        char b;
        Main c;
        string d;

        return 0;
    }
}